2000-03-09  Dan Winship  <danw@helixcode.com>

	* s/HelixCode/Helix Code, Inc./ in the copyrights

2000-03-07  bertrand  <bertrand@helixcode.com>

	* camel-formatter.c (handle_mime_part): 
	plug mem leaks due to bad documentation
	of camel_content_field_get_mime_type
	(print_camel_body_part): idem
	(handle_multipart_alternative): idem

	* gmime-content-field.c (gmime_content_field_get_mime_type): 
	documentation fix.


	* camel-mime-part.c (my_finalize): unref the 
	content_input_stream if any. 

2000-03-06  bertrand  <bertrand@helixcode.com>

	* camel-stream-fs.c (_seek): fix a bogus calculation
	in the return position.

2000-03-05  bertrand  <bertrand@helixcode.com>

	* camel-session.h: cosmetic fixes.

	* camel-stream-fs.c (_read): 
	(_seek): fixed the current position so that it refers
	to the current position in the stream, not in its parent.

2000-03-04  NotZed  <NotZed@HelixCode.com>

	* providers/mbox/camel-mbox-search.c
	(camel_mbox_folder_search_by_expression): Ref the summary
	after we have got it.

2000-03-04  bertrand  <bertrand@helixcode.com>

	* camel-mime-part.c (my_write_content_to_stream): 
	stream the raw content instead of nothing if the encoding
	is not supported.

	* camel-stream-fs.c (_seek): handle eos more
	properly.

	* camel-formatter.c (get_bonobo_tag_for_object): 
	bonobo-goad-id is the good key to look for. 
	(get_bonobo_tag_for_object): close the <object> tag.
	(get_bonobo_tag_for_object): the correct syntax for the
	to set a parameter inside an <object> tag is :
	<object classid="..."> <param name="uid" value="..."> <param ...>
	</object>

2000-03-03  bertrand  <bertrand@helixcode.com>

	* providers/mbox/camel-mbox-folder.c (_get_message_by_uid): 
	use set_input_stream instead of construct_from_stream
	to feed the message object. 

	* camel-data-wrapper.c (my_write_to_stream): reset output stream.
	(my_set_input_stream): unref the previous input stream.
	use the set_output_stream for default behaviour.