@@ -1,3 +1,7 @@
+2000-03-10  bertrand  <bertrand@helixcode.com>
+
+	* camel-service.h: cosmetic changes.
+
 2000-03-09  Dan Winship  <danw@helixcode.com>
 
 	* s/HelixCode/Helix Code, Inc./ in the copyrights
